chatroom api creating