@@ -3,17 +3,25 @@ package com.soim.brandme.chatRoom.application;
 import jakarta.persistence.AttributeConverter;
 import jakarta.persistence.Converter;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Converter
 public class KeywordsConverter implements AttributeConverter<List<String>, String>{
     @Override
     public String convertToDatabaseColumn(List<String> attribute) {
+        if (attribute == null || attribute.isEmpty()) {
+            return null; // 또는 적절한 기본값 반환
+        }
         return String.join(",", attribute);
     }
 
     @Override
     public List<String> convertToEntityAttribute(String dbData) {
-        return List.of(dbData.split(","));
+        if (dbData == null || dbData.trim().isEmpty()) {
+            return new ArrayList<>();
+        }
+        return Arrays.asList(dbData.split(","));
     }
 }
